--- a/Excercise/Modul-02/excercise1/index.html
+++ b/Excercise/Modul-02/excercise1/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./style/style.css">
     <title>SOPA Clothing</title>
@@ -52,11 +54,17 @@
     <div class="hero" id="home">
         <div class="hero-grid"> 
             <div class="hero-grid-item" id="item1">
-                <img src="./style/hero_pic.jpg" alt="">
             </div>
-            <div class="hero-grid-item" id="item2">2</div>
-            <div class="hero-grid-item" id="item3">3</div>
-            <div class="hero-grid-item" id="item4">4</div>
+            <div class="hero-grid-item" id="item2">
+                <h1>REAL DESIGNS<br>BY REAL ARTISTS<br>FOR REAL PEOPLE</h1>
+                <p>We're challenging conventional retail, putting an end to<br>dead stock, unconventional waste and more funtastic.</p>
+            </div>
+            <div class="hero-grid-item" id="item3">
+                <P>#TRENDING2023</P>
+            </div>
+            <div class="hero-grid-item" id="item4">
+                <p>#OLDBUTGOLD</p>
+            </div>
             <!-- <div class="hero-grid-item">5</div>
             <div class="hero-grid-item">6</div>
             <div class="hero-grid-item">7</div>
