Now using <img> instead of background-image, add button

--- a/Excercise/Modul-02/slicing1/index.html
+++ b/Excercise/Modul-02/slicing1/index.html
@@ -54,15 +54,36 @@
     <div class="hero" id="home">
         <div class="hero-grid"> 
             <div class="hero-grid-item" id="item1">
+                <img src="./style/hero_pic.jpg" alt="">
+                <div id="form-container">
+                    <a href="">
+                        <div class="form-content">
+                            <p>LEARN MORE</p>
+                            <span class="material-symbols-outlined">
+                                arrow_downward
+                                </span> 
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="form-content">
+                            <p>CONTACT US</p>
+                            <span class="material-symbols-outlined">
+                                mail
+                                </span>
+                        </div>
+                    </a>
+                </div>
             </div>
             <div class="hero-grid-item" id="item2">
                 <h1>REAL DESIGNS<br>BY REAL ARTISTS<br>FOR REAL PEOPLE</h1>
                 <p>We're challenging conventional retail, putting an end to<br>dead stock, unconventional waste and more funtastic.</p>
             </div>
             <div class="hero-grid-item" id="item3">
+                <img src="./style/bucket_hat.webp" alt="">
                 <P>#TRENDING2023</P>
             </div>
             <div class="hero-grid-item" id="item4">
+                <img src="./style/snapback_hat.jpg" alt="">
                 <p>#OLDBUTGOLD</p>
             </div>
             <!-- <div class="hero-grid-item">5</div>
