--- a/Excercise/Modul-02/slicing1/index.html
+++ b/Excercise/Modul-02/slicing1/index.html
@@ -66,20 +66,29 @@
                 <div id="form-container">
                     <a href="">
                         <div class="form-content">
-                            <p>LEARN MORE</p>
-                            <span class="material-symbols-outlined">
-                                arrow_downward
-                                </span> 
+                            <div class="form-content-msg">
+                                <p>LEARN MORE</p>
+                            </div>
+                            <div class="form-content-btn">
+                                <span class="material-symbols-outlined">
+                                    arrow_downward
+                                    </span> 
+                            </div>
                         </div>
                     </a>
                     <a href="">
                         <div class="form-content">
-                            <p>CONTACT US</p>
-                            <span class="material-symbols-outlined">
-                                mail
-                                </span>
+                            <div class="form-content-msg">
+                                <p>CONTACT US</p>
+                            </div>
+                            <div class="form-content-btn">
+                                <span class="material-symbols-outlined">
+                                    mail
+                                    </span> 
+                            </div>
                         </div>
                     </a>
+                    
                 </div>
                 <!-- Form End -->
             </div>
